[package]
name = "combine"
version = "0.1.0"
authors = ["Alex Standke <astandke@pivotal.io>", "Leah Hanson <lhanson@pivotal.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
regex = "1"
file = "1"
askama = "0.8"
